* Include the new check-dist Makefile to prevent accidental uploads to   unstable; bump build-dep on gnome-pkg-tools to >= 0.10.

--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,8 @@
 TEAM_LIST ?= /usr/share/gnome-pkg-tools/pkg-gnome.team
 # get-orig-source target
 -include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
+# Prevent accidental uploads to unstable
+include /usr/share/gnome-pkg-tools/1/rules/check-dist.mk
 
 GNOME_MODULE := gtk+
 
