* Move build and install base dirs to debian/build and debian/install   instead of debian/tmp/build and debian/tmp/install.

--- a/debian/gtk2-engines-pixbuf.install.in
+++ b/debian/gtk2-engines-pixbuf.install.in
@@ -1,2 +1,2 @@
 # from the shared flavor
-debian/tmp/install/shared/@MODULES_BASE_PATH@/engines/*.so @MODULES_BASE_PATH@/engines
+debian/install/shared/@MODULES_BASE_PATH@/engines/*.so @MODULES_BASE_PATH@/engines
