--- a/debian/control.in
+++ b/debian/control.in
@@ -45,6 +45,8 @@ Priority: extra
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: The GTK+ graphical user interface library - minimal runtime
+ This is a udeb, or a microdeb, for the debian-installer.
+ .
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
  for projects ranging from small one-off tools to complete application
