--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: gtk+2.0
 Section: libs
 Priority: optional
 Maintainer: Sebastien Bacher <seb128@debian.org>
-Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Andrew Lau <netsnipe@users.sourceforge.net>, Clément Stenac <zorglub@debian.org>, Dafydd Harries <daf@debian.org>, Guilherme de S. Pastore <gpastore@debian.org>, Gustavo Franco <stratus@debian.org>, Gustavo Noronha Silva <kov@debian.org>, J.H.M. Dassen (Ray) <jdassen@debian.org>, Jordi Mallach <jordi@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>, Josselin Mouette <joss@debian.org>, Kilian Krause <kilian@debian.org>, Loic Minier <lool@dooz.org>, Marc 'HE' Brockschmidt <he@debian.org>, Marco Cabizza <marco87@gmail.com>, Oystein Gisnas <oystein@gisnas.net>, Ondřej Surý <ondrej@debian.org>, Ross Burton <ross@debian.org>, Sjoerd Simons <sjoerd@debian.org>
-Build-Depends: debhelper (>= 5.0.22), gettext, pkg-config, libglib2.0-dev (>= 2.12.0), libpango1.0-dev (>= 1.12.1-2), libatk1.0-dev (>= 1.9.0), libx11-dev (>= 2:1.0.0-6), libxext-dev, libxi-dev, libxrandr-dev, libxt-dev, libxrender-dev, libxft-dev, libxcursor-dev, libxkbfile-dev, libxinerama-dev, libxfixes-dev, libcairo2-dev (>= 1.2.0), libcairo-directfb2-dev (>= 1.2.4-4), libtiff4-dev, libjpeg62-dev, libpng12-dev, docbook-utils, linuxdoc-tools-text, gnome-pkg-tools (>= 0.10), chrpath, dpkg-dev (>= 1.13.19), x11proto-xext-dev, libdirectfb-dev (>= 0.9.24), libcupsys2-dev (>= 1.2), quilt
+Uploaders: Josselin Mouette <joss@debian.org>, Loic Minier <lool@dooz.org>
+Build-Depends: debhelper (>= 5.0.22), gettext, pkg-config, libglib2.0-dev (>= 2.12.0), libpango1.0-dev (>= 1.12.1-2), libatk1.0-dev (>= 1.9.0), libx11-dev (>= 2:1.0.0-6), libxext-dev, libxi-dev, libxrandr-dev, libxt-dev, libxrender-dev, libxft-dev, libxcursor-dev, libxkbfile-dev, libxinerama-dev, libxfixes-dev, libcairo2-dev (>= 1.2.0), libcairo-directfb2-dev (>= 1.2.4-4), libtiff4-dev, libjpeg62-dev, libpng12-dev, docbook-utils, linuxdoc-tools-text, gnome-pkg-tools (>= 0.11), chrpath, dpkg-dev (>= 1.13.19), x11proto-xext-dev, libdirectfb-dev (>= 0.9.24), libcupsys2-dev (>= 1.2), quilt
 Build-Depends-Indep: gtk-doc-tools, docbook-xml
 Standards-Version: 3.7.2
 
@@ -12,7 +12,7 @@ Section: libs
 Architecture: any
 Depends: libgtk2.0-common (= ${source:Version}), ${shlibs:Depends}
 Provides: gtk2.0-binver-2.10.0
-Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<= 2.14.1-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-3), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<= 2.10), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-7), gtk2-engines-qtpixmap (<= 0.28-1.1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.3.90.2-1), tamil-gtk2im (<= 2.2-4.2), imhangul (<= 0.9.13-3), librsvg2-common (<= 2.14.4-2), gtk2-engines (<< 1:2.8.2-2), gtk2-engines-gtk-qt (<= 1:0.7-1), iiimgcf (<= 11.4.1870-7.3), scim-bridge (<= 0.2.4-1), scim-gtk2-immodule (<= 1.4.4-4), gtk-im-libthai (<= 0.1.4-1), uim-gtk2.0 (<= 1:1.2.1-3), libwmf-dev (<= 0.2.8.4-2), libwmf0.2-7 (<= 0.2.8.4-2), swf-player (<= 0.3.6-2.1)
+Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<= 2.14.1-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-3), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<= 2.10), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-7), gtk2-engines-qtpixmap (<= 0.28-1.1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.3.90.2-1), tamil-gtk2im (<= 2.2-4.2), imhangul (<= 0.9.13-3), librsvg2-common (<= 2.14.4-2), gtk2-engines (<< 1:2.8.2-2), gtk2-engines-gtk-qt (<= 1:0.7-1), iiimgcf (<= 11.4.1870-7.3), scim-bridge (<= 0.2.4-1), scim-gtk2-immodule (<= 1.4.4-4), gtk-im-libthai (<= 0.1.4-1), uim-gtk2.0 (<= 1:1.2.1-3), libwmf-dev (<< 0.2.8.4-5), libwmf0.2-7 (<< 0.2.8.4-5), swf-player (<= 0.3.6-2.1)
 Replaces: libgtk2.0-0png3
 Recommends: hicolor-icon-theme, libgtk2.0-bin
 Description: The GTK+ graphical user interface library
@@ -45,6 +45,8 @@ Priority: extra
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: The GTK+ graphical user interface library - minimal runtime
+ This is a udeb, or a microdeb, for the debian-installer.
+ .
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
  for projects ranging from small one-off tools to complete application
