--- a/debian/control.in
+++ b/debian/control.in
@@ -3,18 +3,88 @@ Section: libs
 Priority: optional
 Maintainer: Sebastien Bacher <seb128@debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>= 5.0.22), gettext, pkg-config, libglib2.0-dev (>= 2.12.0), libpango1.0-dev (>= 1.12.1-2), libatk1.0-dev (>= 1.9.0), libx11-dev (>= 2:1.0.0-6), libxext-dev, libxi-dev, libxrandr-dev, libxt-dev, libxrender-dev, libxft-dev, libxcursor-dev, libxkbfile-dev, libxinerama-dev, libxfixes-dev, libcairo2-dev (>= 1.2.0), libcairo-directfb2-dev (>= 1.2.4-4), libtiff4-dev, libjpeg62-dev, libpng12-dev, docbook-utils, linuxdoc-tools-text, gnome-pkg-tools (>= 0.11), chrpath, dpkg-dev (>= 1.13.19), x11proto-xext-dev, libdirectfb-dev (>= 0.9.24), libcupsys2-dev (>= 1.2), quilt
-Build-Depends-Indep: gtk-doc-tools, docbook-xml
+Build-Depends: debhelper (>= 5.0.22),
+               gettext,
+               pkg-config,
+               libglib2.0-dev (>= 2.12.0),
+               libpango1.0-dev (>= 1.12.1-2),
+               libatk1.0-dev (>= 1.9.0),
+               libx11-dev (>= 2:1.0.0-6),
+               libxext-dev,
+               libxi-dev,
+               libxrandr-dev,
+               libxt-dev,
+               libxrender-dev,
+               libxft-dev,
+               libxcursor-dev,
+               libxkbfile-dev,
+               libxinerama-dev,
+               libxfixes-dev,
+               libcairo2-dev (>= 1.2.0),
+               libcairo-directfb2-dev (>= 1.2.4-4),
+               libtiff4-dev,
+               libjpeg62-dev,
+               libpng12-dev,
+               docbook-utils,
+               linuxdoc-tools-text,
+               gnome-pkg-tools (>= 0.11),
+               chrpath,
+               dpkg-dev (>= 1.13.19),
+               x11proto-xext-dev,
+               libdirectfb-dev (>= 0.9.24),
+               libcupsys2-dev (>= 1.2),
+               quilt
+Build-Depends-Indep: gtk-doc-tools,
+                     docbook-xml
 Standards-Version: 3.7.2
 
 Package: @SHARED_PKG@
 Section: libs
 Architecture: any
-Depends: @COMMON_PKG@ (= ${source:Version}), ${shlibs:Depends}
+Depends: @COMMON_PKG@ (= ${source:Version}),
+         ${shlibs:Depends}
 Provides: @GTK_BINVER_DEP@
-Conflicts: libgtk2.0-0png3, eog2 (<< 1.0.1-4), gnome-panel2 (<< 2.0.4-1), celestia (<< 1.2.4-4), gimp1.3 (<< 1.3.7-1.1), metatheme (<< 0.9.7-3), libgnomeui-0 (<= 2.14.1-2), gtk2.0-examples (<< 2.2.0), libgdkxft0, gtk2-engines-wonderland (<= 1.0-3), gtk2-engines-cleanice (<= 1.2.8-1), gtk2-engines-thinice (<< 2.6), gtk2-engines-crux (<< 2.6), gtk2-engines-mist (<< 2.6), gtk2-engines-highcontrast (<< 2.6), gtk2-engines-lighthouseblue (<< 2.6), gnome-themes (<< 2.6), gtk2-engines-industrial (<< 0.2.32-5), gtk2-engines-pixbuf (<= 2.10), gtk2-engines-redmond95 (<< 2.2.0-2.1), gtk2-engines-metal (<< 2.2.0-2.1), gtk2-engines-magicchicken (<= 1.1.1-7), gtk2-engines-qtpixmap (<= 0.28-1.1), gtk2-engines-smooth (<< 0.5.6-3), gtk2-engines-xfce (<= 2.3.90.2-1), tamil-gtk2im (<= 2.2-4.2), imhangul (<= 0.9.13-3), librsvg2-common (<= 2.14.4-2), gtk2-engines (<< 1:2.8.2-2), gtk2-engines-gtk-qt (<= 1:0.7-1), iiimgcf (<= 11.4.1870-7.3), scim-bridge (<= 0.2.4-1), scim-gtk2-immodule (<= 1.4.4-4), gtk-im-libthai (<= 0.1.4-1), uim-gtk2.0 (<= 1:1.2.1-3), libwmf-dev (<< 0.2.8.4-5), libwmf0.2-7 (<< 0.2.8.4-5), swf-player (<= 0.3.6-2.1)
+Conflicts: libgtk2.0-0png3,
+           eog2 (<< 1.0.1-4),
+           gnome-panel2 (<< 2.0.4-1),
+           celestia (<< 1.2.4-4),
+           gimp1.3 (<< 1.3.7-1.1),
+           metatheme (<< 0.9.7-3),
+           libgnomeui-0 (<= 2.14.1-2),
+           gtk2.0-examples (<< 2.2.0),
+           libgdkxft0,
+           gtk2-engines-wonderland (<= 1.0-3),
+           gtk2-engines-cleanice (<= 1.2.8-1),
+           gtk2-engines-thinice (<< 2.6),
+           gtk2-engines-crux (<< 2.6),
+           gtk2-engines-mist (<< 2.6),
+           gtk2-engines-highcontrast (<< 2.6),
+           gtk2-engines-lighthouseblue (<< 2.6),
+           gnome-themes (<< 2.6),
+           gtk2-engines-industrial (<< 0.2.32-5),
+           gtk2-engines-pixbuf (<= 2.10),
+           gtk2-engines-redmond95 (<< 2.2.0-2.1),
+           gtk2-engines-metal (<< 2.2.0-2.1),
+           gtk2-engines-magicchicken (<= 1.1.1-7),
+           gtk2-engines-qtpixmap (<= 0.28-1.1),
+           gtk2-engines-smooth (<< 0.5.6-3),
+           gtk2-engines-xfce (<= 2.3.90.2-1),
+           tamil-gtk2im (<= 2.2-4.2),
+           imhangul (<= 0.9.13-3),
+           librsvg2-common (<= 2.14.4-2),
+           gtk2-engines (<< 1:2.8.2-2),
+           gtk2-engines-gtk-qt (<= 1:0.7-1),
+           iiimgcf (<= 11.4.1870-7.3),
+           scim-bridge (<= 0.2.4-1),
+           scim-gtk2-immodule (<= 1.4.4-4),
+           gtk-im-libthai (<= 0.1.4-1),
+           uim-gtk2.0 (<= 1:1.2.1-3),
+           libwmf-dev (<< 0.2.8.4-5),
+           libwmf0.2-7 (<< 0.2.8.4-5),
+           swf-player (<= 0.3.6-2.1)
 Replaces: libgtk2.0-0png3
-Recommends: hicolor-icon-theme, @BIN_PKG@
+Recommends: hicolor-icon-theme,
+            @BIN_PKG@
 Description: The GTK+ graphical user interface library
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
@@ -26,7 +96,8 @@ Description: The GTK+ graphical user interface library
 Package: @DIRECTFB_PKG@
 Section: libs
 Architecture: any
-Depends: @SHARED_PKG@ (= ${binary:Version}), ${shlibs:Depends}
+Depends: @SHARED_PKG@ (= ${binary:Version}),
+         ${shlibs:Depends}
 Conflicts: libgtk+2.0-directfb0
 Description: The GTK+ graphical user interface library - DirectFB runtime
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -60,8 +131,10 @@ Section: misc
 Architecture: all
 Depends: ${misc:Depends}
 Recommends: @SHARED_PKG@
-Replaces: libgtk1.3-common, libgtk2.0-data
-Conflicts: libgtk1.3-common, libgtk2.0-data
+Replaces: libgtk1.3-common,
+          libgtk2.0-data
+Conflicts: libgtk1.3-common,
+           libgtk2.0-data
 Description: Common files for the GTK+ graphical user interface library
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
@@ -73,8 +146,10 @@ Description: Common files for the GTK+ graphical user interface library
 Package: @BIN_PKG@
 Section: misc
 Architecture: all
-Depends: ${misc:Depends}, @SHARED_PKG@ (>= ${source:Version})
-Replaces: libgtk2.0-common (<= 2.4.0-3), libgtk2.0-dev (<= 2.4.3-1)
+Depends: ${misc:Depends},
+         @SHARED_PKG@ (>= ${source:Version})
+Replaces: libgtk2.0-common (<= 2.4.0-3),
+          libgtk2.0-dev (<= 2.4.3-1)
 Conflicts: libgtk2.0-dev (<= 2.4.3-1)
 Description: The programs for the GTK+ graphical user interface library
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -88,9 +163,22 @@ Description: The programs for the GTK+ graphical user interface library
 Package: @DEV_PKG@
 Section: libdevel
 Architecture: any
-Depends: @SHARED_PKG@ (= ${binary:Version}), libglib2.0-dev (>= 2.12.0), libpango1.0-dev (>= 1.10.0-2), libatk1.0-dev (>= 1.6.1-2), libcairo2-dev, libx11-dev (>= 2:1.0.0-6), libxext-dev, libxinerama-dev, libxi-dev, libxrandr-dev, libxcursor-dev, libxfixes-dev, pkg-config
+Depends: @SHARED_PKG@ (= ${binary:Version}),
+         libglib2.0-dev (>= 2.12.0),
+         libpango1.0-dev (>= 1.10.0-2),
+         libatk1.0-dev (>= 1.6.1-2),
+         libcairo2-dev,
+         libx11-dev (>= 2:1.0.0-6),
+         libxext-dev,
+         libxinerama-dev,
+         libxi-dev,
+         libxrandr-dev,
+         libxcursor-dev,
+         libxfixes-dev,
+         pkg-config
 Suggests: @DOC_PKG@
-Replaces: libgtk1.3-dev, gtk2-engines-pixbuf (<< 2.8.18-5)
+Replaces: libgtk1.3-dev,
+          gtk2-engines-pixbuf (<< 2.8.18-5)
 Conflicts: libgtk1.3-dev
 Description: Development files for the GTK+ library
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -104,7 +192,10 @@ Description: Development files for the GTK+ library
 Package: @DIRECTFB_DEV_PKG@
 Section: libdevel
 Architecture: any
-Depends: @DIRECTFB_PKG@ (= ${binary:Version}), @DEV_PKG@ (= ${binary:Version}), libcairo-directfb2-dev, libcairo2-dev (>= 1.2.0)
+Depends: @DIRECTFB_PKG@ (= ${binary:Version}),
+         @DEV_PKG@ (= ${binary:Version}),
+         libcairo-directfb2-dev,
+         libcairo2-dev (>= 1.2.0)
 Conflicts: libgtk+2.0-directfb-dev
 Description: Development files for the GTK+ library - DirectFB version
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -142,7 +233,9 @@ Architecture: all
 Depends: lynx | www-browser
 Replaces: libgtk1.3-doc
 Conflicts: libgtk1.3-doc
-Recommends: libglib2.0-doc, libatk1.0-doc, libpango1.0-doc
+Recommends: libglib2.0-doc,
+            libatk1.0-doc,
+            libpango1.0-doc
 Description: Documentation for the GTK+ graphical user interface library
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
@@ -156,7 +249,8 @@ Package: @EXAMPLES_PKG@
 Section: x11
 Priority: extra
 Architecture: any
-Depends: ${shlibs:Depends}, @SHARED_PKG@ (= ${binary:Version})
+Depends: ${shlibs:Depends},
+         @SHARED_PKG@ (= ${binary:Version})
 Replaces: libgtk1.3-dev
 Description: Examples files for the GTK+ 2.0
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -171,7 +265,9 @@ Package: @PIXBUF_PKG@
 Section: graphics
 Priority: optional
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, @SHARED_PKG@ (= ${binary:Version})
+Depends: ${misc:Depends},
+         ${shlibs:Depends},
+         @SHARED_PKG@ (= ${binary:Version})
 Suggests: gtk-engines-pixmap
 Conflicts: gtk2.0-engines-pixbuf
 Replaces: gtk2.0-engines-pixbuf
