--- a/debian/control.in
+++ b/debian/control.in
@@ -50,7 +50,7 @@ Conflicts: libgtk2.0-0png3,
            celestia (<< 1.2.4-4),
            gimp1.3 (<< 1.3.7-1.1),
            metatheme (<< 0.9.7-3),
-           libgnomeui-0 (<= 2.14.1-2),
+           libgnomeui-0 (<= 2.14.1-3),
            gtk2.0-examples (<< 2.2.0),
            libgdkxft0,
            gtk2-engines-wonderland (<= 1.0-3),
@@ -69,19 +69,25 @@ Conflicts: libgtk2.0-0png3,
            gtk2-engines-qtpixmap (<= 0.28-1.1),
            gtk2-engines-smooth (<< 0.5.6-3),
            gtk2-engines-xfce (<= 2.3.90.2-1),
-           tamil-gtk2im (<= 2.2-4.2),
-           imhangul (<= 0.9.13-3),
+           tamil-gtk2im (<= 2.2-4.3),
+           imhangul (<= 0.9.13-3.1),
            librsvg2-common (<= 2.14.4-2),
            gtk2-engines (<< 1:2.8.2-2),
-           gtk2-engines-gtk-qt (<= 1:0.7-1),
+           gtk2-engines-gtk-qt (<< 1:0.7-2),
            iiimgcf (<= 11.4.1870-7.3),
            scim-bridge (<= 0.2.4-1),
-           scim-gtk2-immodule (<= 1.4.4-4),
+           scim-gtk2-immodule (<= 1.4.4-7),
            gtk-im-libthai (<= 0.1.4-1),
-           uim-gtk2.0 (<= 1:1.2.1-3),
+           uim-gtk2.0 (<= 1:1.2.1-9),
            libwmf-dev (<< 0.2.8.4-5),
            libwmf0.2-7 (<< 0.2.8.4-5),
-           swf-player (<= 0.3.6-2.1)
+           swf-player (<= 0.3.6-2.2),
+           gcin (<= 1.3.4-1),
+           gtk-qt-engine (<= 1:0.8~svn-rev31-3),
+           iiimf-client-gtk (<= 12.3.91-3),
+           libginspx0 (<= 20050529-1),
+           scim-bridge-client-gtk (<= 0.4.10-1),
+           iiimgcf (<= 11.4.1870-7)
 Replaces: libgtk2.0-0png3
 Recommends: hicolor-icon-theme,
             @BIN_PKG@
