--- a/debian/control
+++ b/debian/control
@@ -51,7 +51,7 @@ Conflicts: libgtk2.0-0png3,
            libgnomeui-0 (<= 2.14.1-3),
            gtk2.0-examples (<< 2.2.0),
            libgdkxft0,
-           gtk2-engines-wonderland (<= 1.0-3),
+           gtk2-engines-wonderland (<< 1.0-4),
            gtk2-engines-cleanice (<= 1.2.8-1),
            gtk2-engines-thinice (<< 2.6),
            gtk2-engines-crux (<< 2.6),
