--- a/debian/control
+++ b/debian/control
@@ -68,7 +68,7 @@ Conflicts: libgtk2.0-0png3,
            gtk2-engines-smooth (<< 0.5.6-3),
            gtk2-engines-xfce (<= 2.3.90.2-1),
            tamil-gtk2im (<= 2.2-4.3),
-           imhangul (<= 0.9.13-3.1),
+           imhangul (<< 0.9.13-5),
            librsvg2-common (<= 2.14.4-2),
            gtk2-engines (<< 1:2.8.2-2),
            gtk2-engines-gtk-qt (<< 1:0.7-2),
