--- a/debian/control.in
+++ b/debian/control.in
@@ -80,7 +80,7 @@ Conflicts: libgtk2.0-0png3,
            libwmf-dev (<< 0.2.8.4-5),
            libwmf0.2-7 (<< 0.2.8.4-5),
            swf-player (<= 0.3.6-2.2),
-           gcin (<= 1.3.4-1),
+           gcin (<< 1.3.4-2),
            gtk-qt-engine (<= 1:0.8~svn-rev31-3),
            iiimf-client-gtk (<= 12.3.91-3),
            libginspx0 (<= 20050529-1),
