--- a/debian/control.in
+++ b/debian/control.in
@@ -75,7 +75,7 @@ Conflicts: libgtk2.0-0png3,
            iiimgcf (<= 11.4.1870-7.3),
            scim-bridge (<= 0.2.4-1),
            scim-gtk2-immodule (<= 1.4.4-7),
-           gtk-im-libthai (<= 0.1.4-2),
+           gtk-im-libthai (<< 0.1.4-3),
            uim-gtk2.0 (<= 1:1.2.1-9),
            libwmf-dev (<< 0.2.8.4-5),
            libwmf0.2-7 (<< 0.2.8.4-5),
