* Let the udeb provide the Gtk+ module ABI (binver); closes: #419592.

--- a/debian/control.in
+++ b/debian/control.in
@@ -119,6 +119,7 @@ Section: debian-installer
 Priority: extra
 Architecture: any
 Depends: ${shlibs:Depends}
+Provides: @GTK_BINVER_DEP@
 Description: The GTK+ graphical user interface library - minimal runtime
  This is a udeb, or a microdeb, for the debian-installer.
  .
