--- a/debian/control
+++ b/debian/control
@@ -119,6 +119,7 @@ Section: debian-installer
 Priority: extra
 Architecture: any
 Depends: ${shlibs:Depends}
+Provides: gtk2.0-binver-2.10.0
 Description: The GTK+ graphical user interface library - minimal runtime
  This is a udeb, or a microdeb, for the debian-installer.
  .
