--- a/debian/control
+++ b/debian/control
@@ -75,9 +75,9 @@ Conflicts: libgtk2.0-0png3,
            gtk2-engines-gtk-qt (<< 1:0.7-2),
            iiimgcf (<= 11.4.1870-7.3),
            scim-bridge (<= 0.2.4-1),
-           scim-gtk2-immodule (<= 1.4.4-7),
+           scim-gtk2-immodule (<< 1.4.4-8),
            gtk-im-libthai (<< 0.1.4-3),
-           uim-gtk2.0 (<= 1:1.2.1-9),
+           uim-gtk2.0 (<< 1:1.4.1-3),
            libwmf-dev (<< 0.2.8.4-5),
            libwmf0.2-7 (<< 0.2.8.4-5),
            swf-player (<= 0.3.6-2.2),
