* Post-transition bump of conflicts to gtk2-engines-cleanice (<< 2.4.0-1.1),   gtk2-engines-magicchicken (<< 1.1.1-7.1), gtk2-engines-qtpixmap   (<< 0.28-1.2), libginspx0 (<< 20050529-1.1).

--- a/debian/control
+++ b/debian/control
@@ -53,7 +53,7 @@ Conflicts: libgtk2.0-0png3,
            gtk2.0-examples (<< 2.2.0),
            libgdkxft0,
            gtk2-engines-wonderland (<< 1.0-4),
-           gtk2-engines-cleanice (<= 1.2.8-1),
+           gtk2-engines-cleanice (<< 2.4.0-1.1),
            gtk2-engines-thinice (<< 2.6),
            gtk2-engines-crux (<< 2.6),
            gtk2-engines-mist (<< 2.6),
@@ -64,8 +64,8 @@ Conflicts: libgtk2.0-0png3,
            gtk2-engines-pixbuf (<= 2.10),
            gtk2-engines-redmond95 (<< 2.2.0-2.1),
            gtk2-engines-metal (<< 2.2.0-2.1),
-           gtk2-engines-magicchicken (<= 1.1.1-7),
-           gtk2-engines-qtpixmap (<= 0.28-1.1),
+           gtk2-engines-magicchicken (<< 1.1.1-7.1),
+           gtk2-engines-qtpixmap (<< 0.28-1.2),
            gtk2-engines-smooth (<< 0.5.6-3),
            gtk2-engines-xfce (<= 2.3.90.2-1),
            tamil-gtk2im (<= 2.2-4.3),
@@ -84,7 +84,7 @@ Conflicts: libgtk2.0-0png3,
            gcin (<< 1.3.4-2),
            gtk-qt-engine (<= 1:0.8~svn-rev31-3),
            iiimf-client-gtk (<= 12.3.91-3),
-           libginspx0 (<= 20050529-1),
+           libginspx0 (<< 20050529-1.1),
            scim-bridge-client-gtk (<= 0.4.10-1),
            iiimgcf (<= 11.4.1870-7)
 Replaces: libgtk2.0-0png3
