--- a/debian/control.in
+++ b/debian/control.in
@@ -67,8 +67,8 @@ Conflicts: libgtk2.0-0png3,
            gtk2-engines-magicchicken (<< 1.1.1-7.1),
            gtk2-engines-qtpixmap (<< 0.28-1.2),
            gtk2-engines-smooth (<< 0.5.6-3),
-           gtk2-engines-xfce (<= 2.3.90.2-1),
-           tamil-gtk2im (<= 2.2-4.3),
+           gtk2-engines-xfce (<< 2.4.0-1),
+           tamil-gtk2im (<< 2.2-4.4),
            imhangul (<< 0.9.13-5),
            librsvg2-common (<= 2.14.4-2),
            gtk2-engines (<< 1:2.8.2-2),
@@ -80,12 +80,12 @@ Conflicts: libgtk2.0-0png3,
            uim-gtk2.0 (<< 1:1.4.1-3),
            libwmf-dev (<< 0.2.8.4-5),
            libwmf0.2-7 (<< 0.2.8.4-5),
-           swf-player (<= 0.3.6-2.2),
+           swf-player (<< 0.3.6-2.3),
            gcin (<< 1.3.4-2),
-           gtk-qt-engine (<= 1:0.8~svn-rev31-3),
+           gtk-qt-engine (<< 1:0.8~svn-rev36-1),
            iiimf-client-gtk (<= 12.3.91-3),
            libginspx0 (<< 20050529-1.1),
-           scim-bridge-client-gtk (<= 0.4.10-1),
+           scim-bridge-client-gtk (<< 0.4.10-1.1),
            iiimgcf (<= 11.4.1870-7)
 Replaces: libgtk2.0-0png3
 Recommends: hicolor-icon-theme,
