* Conflict with gtk2-engines-ubuntulooks (<= 0.9.11-1).

--- a/debian/control
+++ b/debian/control
@@ -67,6 +67,7 @@ Conflicts: libgtk2.0-0png3,
            gtk2-engines-magicchicken (<< 1.1.1-7.1),
            gtk2-engines-qtpixmap (<< 0.28-1.2),
            gtk2-engines-smooth (<< 0.5.6-3),
+           gtk2-engines-ubuntulooks (<= 0.9.11-1),
            gtk2-engines-xfce (<< 2.4.0-1),
            tamil-gtk2im (<< 2.2-4.4),
            imhangul (<< 0.9.13-5),
