* Final bits of 2.11.2 new upstream release.   - Bump up build-deps to libglib2.0-dev >= 2.13.1, libpango1.0-dev >=     1.15.3, gtk-doc-tools >= 1.6.   - Build-dep on libxcomposite-dev for composite support.   - Build-dep on libxdamage-dev for damage support.   - Enable test print backend by passing --enable-test-print-backend to     configure.

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 5.0.22),
                gettext,
                pkg-config,
                libglib2.0-dev (>= 2.13.1),
-               libpango1.0-dev (>= 1.12.1-2),
+               libpango1.0-dev (>= 1.15.3),
                libatk1.0-dev (>= 1.9.0),
                libx11-dev (>= 2:1.0.0-6),
                libxext-dev,
@@ -17,6 +17,8 @@ Build-Depends: debhelper (>= 5.0.22),
                libxrender-dev,
                libxft-dev,
                libxcursor-dev,
+               libxcomposite-dev,
+               libxdamage-dev,
                libxkbfile-dev,
                libxinerama-dev,
                libxfixes-dev,
@@ -32,7 +34,7 @@ Build-Depends: debhelper (>= 5.0.22),
                libdirectfb-dev (>= 0.9.24),
                libcupsys2-dev (>= 1.2),
                quilt
-Build-Depends-Indep: gtk-doc-tools,
+Build-Depends-Indep: gtk-doc-tools (>= 1.6),
                      docbook-xml
 Standards-Version: 3.7.2
 
