* New upstream development release, with API additions; the new API may   still change incompatibly, especially the tooltips API.   - Bump shlibs to >= 2.11.5.   - Bump up libpango1.0-dev build-dep to >= 1.17.3.   - Ship the new gtk-builder-convert Python script to convert Glade files to     GtkBuilder syntax in libgtk2.0-dev; call dh_python to generate a     ${python:Depends} but Recommend ${python:Depends} to avoid pulling     python on buildds; the script requires python >= 2.4, but this is not     enforced in the dependencies.   - Refresh patches 001_static-linking-dont-query-immodules,     006_proper-directfb-modules, 040_filechooser_single-click to apply     cleanly.   - Update relibtoolizing patch, 070_mandatory-relibtoolize.

--- a/debian/rules
+++ b/debian/rules
@@ -48,7 +48,7 @@ DEBVERSION := $(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
 VERSION := $(shell echo $(DEBVERSION) | sed -e 's/-[^-]*$$//')
 APIVER := 2.0
 SONAME := 0
-SHVER := 2.11.4
+SHVER := 2.11.5
 
 # earliest version that this release has backwards binary compatibility for
 GTK_BINARY_VERSION := 2.10.0
@@ -291,7 +291,8 @@ binary-arch: build $(maybe_check) install $(call dh_subst_files,$(BINARY_ARCH_PK
 	dh_strip -a --dbg-package=$(DEBUG_PKG)
 	dh_compress -a
 	dh_fixperms -a -Xusr/lib/$(SHARED_PKG)
-	dh_makeshlibs -p$(SHARED_PKG)\
+	dh_python -a
+	dh_makeshlibs -p$(SHARED_PKG) \
 		-X$(MODULES_BASE_PATH) \
 		-V"$(SHARED_PKG) (>= $(SHVER))" \
 		--add-udeb=$(UDEB_PKG)
